[package]
name = "osc-tty"
version = "0.1.0"
edition = "2021"
authors = ["Panos Michail <michailpanagiotis@gmail.com>"]
description = "A CLI utility that wraps subprocess execution with OSC message listening"
license = "MIT"

[[bin]]
name = "osc-tty"
path = "src/main.rs"

[[bin]]
name = "osc-send"
path = "src/bin/osc-send.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rosc = "0.10"
env_logger = "0.11"
log = "0.4"
percent-encoding = "2.3"
signal-hook = "0.3"
nix = { version = "0.29", features = ["signal"] }
